# eamodeler

./: .env  .gitignore  README.md  generate_interface_docs.py  hello.py  pyproject.toml  run.sh  setup-env.sh  test_erd_generator.py
.github/: copilot-instructions.md
docs/: erd_generator.md  mermaid_lexical_error_fix.md
src/eamodeler/: __init__.py
src/eamodeler/cli/: __init__.py  main.py
src/eamodeler/core/: __init__.py
src/eamodeler/models/: __init__.py
src/eamodeler/utils/: __init__.py  erd_generator.py  generate_interface_docs.py  integration_diagram.py  interface_lvl1_docs.py
tests/: test_cli.py  test_eamodeler.py
